examples/negative/type_errors/L3/13_param_wanted_bool.ob
MODULE ParamWantedBool;

VAR y: INTEGER;

PROCEDURE FOO (VAR x: BOOLEAN);

  BEGIN
    x := TRUE;
  END FOO;

BEGIN
  y := 42;
  FOO(y);
END ParamWantedBool.
